# etl_2025_final_project

./: .gitignore  README.MD  README.md  makefile  pyproject.toml
data/analytics/: grid_hotspots.geojson  kpi_global.parquet  kpi_localidad.parquet  panel_localidad_2018.parquet
data/clean/: siniestralidad_2018_dist_semaforos.parquet  siniestralidad_2018_geocoded_google_parallel.parquet  siniestralidad_2018_loc.parquet
data/raw/: siniestralidad_2018_raw.parquet
data/raw/localidades/: localidades.geojson
data/raw/mortalidad/: mortalidad_raw.parquet
data/raw/runt/: runt_raw.parquet
data/raw/semaforos/: semaforos_raw.parquet
data/raw/siniestralidad_2018/: siniestralidad_2018_raw.parquet
data/working/: geocache_nominatim.json
src/analytics/: interpretacion_resultados.py  resumen_kpi.py
src/dashboard/: streamlit_app.py
src/extract/: extract_comparendos.py  extract_localidades.py  extract_mortalidad.py  extract_runt.py  extract_semaforos.py  extract_siniestralidad.py  extract_siniestralidad_2018.py
src/transform/: agregacion_hex.py  agregacion_hotspots.py  calc_proximidad_semaforos.py  geocode_addresses.py  join_localidades.py  merge_mortalidad.py  probar.py
